Fix CORS preflight by enforcing global filter precedence